# modern-python-setup

./: .bashrc.chgs  .darglint  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: release-drafter.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.rst  reference.rst
src/.github/workflows/: tests.yml
src/modern_python_setup/: __init__.py  console.py  wikipedia.py
src/modern_python_setup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
