[tool.poetry]
name = "modern-python-setup"
version = "0.1.0"
description = "The Modern Python Setup project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hubplug/modern-python-setup"
repository = "https://github.com/hubplug/modern-python-setup"
keywords = ["modern", "python", "setup"]
authors = ["Hub Plug <31110528+hubplug@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
modern-python-setup = "modern_python_setup.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
