[tool.poetry]
name = "modern-python-setup"
version = "0.1.0"
description = "The Modern Python Setup project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hubplug/modern-python-setup"
repository = "https://github.com/hubplug/modern-python-setup"
keywords = ["modern", "python", "setup"]
authors = ["Hub Plug <31110528+hubplug@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
bandit = "^1.6.2"
black = {version = "^19.10b0", allow-prereleases = true}
coverage = {extras = ["toml"], version = "^5.2"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.782"
pytype = {version = "^2020.6.26", python = "3.7"}

[tool.poetry.scripts]
modern-python-setup = "modern_python_setup.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["modern_python_setup"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
